--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="rocket.png" type="image/png">
-  <title>Reaction simulator</title>
+  <title>Тренажер на реакцию</title>
 </head>
 
 <body>
