--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p id="reactionTime">Ваша реакция: <span id="time">0</span></p>
       </div>
     </div>
-    <audio id="sound" src="alle.mp3" preload="auto"></audio>
+    <audio id="sound" src="alle.m4a" preload="auto"></audio>
 
     <script src="main.js"></script>
   </body>
